--- a/styles/sass/_animation.scss
+++ b/styles/sass/_animation.scss
@@ -15,23 +15,40 @@
 }
 
 @keyframes spriteMoveX {
-  from {
+  0% {
     background-position-x: 0;
   }
-  to {
-    // background-position-x: -6000px;
-    background-position-x: calc(var(--logoSpriteWidth) * -10);
+  100% {
+    background-position-x: -6000px;
   }
 }
 @keyframes spriteMoveY {
-  from {
+  0% {
     background-position-y: 0;
   }
-  to {
-    // background-position-y: -4800px;
-    background-position-y: calc(var(--logoSpriteHeight) * -12);
+  100% {
+    background-position-y: -4800px;
   }
 }
+// =====
+// @-webkit-keyframes spriteMoveX {
+//   0% {
+//     background-position-x: 0;
+//   }
+//   100% {
+//     // background-position-x: -6000px;
+//     background-position-x: calc(var(--logoSpriteWidth) * -10);
+//   }
+// }
+// @-webkit-keyframes spriteMoveY {
+//   0% {
+//     background-position-y: 0;
+//   }
+//   100% {
+//     // background-position-y: -4800px;
+//     background-position-y: calc(var(--logoSpriteHeight) * -12);
+//   }
+// }
 
 @keyframes slideIn {
   0% {
@@ -63,7 +80,7 @@
     background-position-x: 0;
   }
   to {
-    background-position-x: calc(var(--projectSpriteWidth) * -10);
+    background-position-x: -4400px;
   }
 }
 @keyframes moveY {
@@ -71,7 +88,7 @@
     background-position-y: 0;
   }
   to {
-    background-position-y: calc(var(--projectSpriteHeight) * -6);
+    background-position-y: -3840px;
   }
 }
 // NOTE:webkit
@@ -81,7 +98,7 @@
     background-position-x: 0;
   }
   to {
-    background-position-x: calc(var(--projectSpriteWidth) * -10);
+    background-position-x: -4400px;
   }
 }
 @-webkit-keyframes moveY {
@@ -89,7 +106,7 @@
     background-position-y: 0;
   }
   to {
-    background-position-y: calc(var(--projectSpriteHeight) * -6);
+    background-position-y: -3840px;
   }
 }
 // =====
